@@ -9,6 +9,7 @@
 	language is not English.
 	* src/gui/playerbox.cpp: Centered sprite inside selection box.
 	* src/gui/char_select.cpp: Reworked layout of dialog box.
+	* src/gui/serverdialog.cpp: Converted to layout handler.
 
 2007-10-19  Guillaume Melquiond  <guillaume.melquiond@gmail.com>
 
